# eatlocal

./: .env-template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  bite_cli.org  conftest.py  hello.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_e2e.py
.github/workflows/: publish.yml  python-app.yml  tests.yml
docs/: bite_cli.org  docs.md
eatlocal/: .__main__.py.un~  .eatlocal.py.un~  .eatlocal.py~.un~  LICENSE  __init__.py  __main__.py  __main__.py~  cli.py  constants.py  eatlocal.py  eatlocal.py~  pydriver.py
eatlocal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
old_version/: pyproject.toml
src/eatlocal/: __init__.py  __main__.py  constants.py  eatlocal.py  pydriver.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_units.py
tests/testing_content/: bites_api.json  bites_list.html  summing_content.txt  testing_env
tests/testing_content/sum_n_numbers/: test_summing.py
tests/testing_repo/: .local_bites.json
tests/testing_repo/103/: README.md  bite.html  git.txt  test_winners.py  winners.py
tests/testing_repo/103/submissions/: save1_nopass.py  save2_passed.py
tests/testing_repo/104/: README.md  bite.html  git.txt  pipe.py  test_pipe.py
tests/testing_repo/104/submissions/: save1_passed.py
tests/testing_repo/https:/pybitesplatform.com/bites/sum-n-numbers/: summing.py  test_summing.py
tests/testing_repo/parse-a-list-of-names/: bite.html  names.py  test_names.py
tests/testing_repo/rotate_string_characters/: rotate.py
tests/testing_repo/sum_n_numbers/: bite.html
