[project]
name = "eatlocal"
version = "0.9.0"
description = "solve pybites locally"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "gitpython>=3.1.43",
    "iterfzf>=1.4.0.54.3",
    "pytest-playwright>=0.5.2",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "typer>=0.12.5",
]
[project.scripts]
example-packaged-app = "eatlocal.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
